force-app/main/default/objects/Core_Grant__c/Core_Grant__c.object-meta.xml
<CustomObject>
    <description>1. Not integration relevant
2. CORE
3. SF-269</description>
    <label>Zuwendung</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zuwendungen</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>