force-app/main/default/objects/Core_Grant__c/fields/Core_Account__c.field-meta.xml
<CustomField>
    <fullName>Core_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the primary Account of the Contact. Can be overwritten if the Grant was given to the Contact in his role on another Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>