force-app/main/default/objects/Core_Grant__c/fields/Core_Approval_Above_350_Euro__c.field-meta.xml
<CustomField>
    <fullName>Core_Approval_Above_350_Euro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. Core
3.  Set by Flow &quot;Core_Grant_Screen_Flow&quot; if the sum of all Grants for this contact and this enterprise in the last 12 months is above 350 Euro.</description>
    <label>Approval above 350 Euro</label>
    <type>Checkbox</type>
</CustomField>