force-app/main/default/objects/Core_Grant__c/fields/Core_Approval_for_PEP__c.field-meta.xml
<CustomField>
    <fullName>Core_Approval_for_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot;  if the Grant is above 25 Euro for a Politically exposed Person.</description>
    <label>Approval for PEP</label>
    <type>Checkbox</type>
</CustomField>