force-app/main/default/objects/Core_Grant__c/fields/Core_Approvalstatus__c.field-meta.xml
<CustomField>
    <fullName>Core_Approvalstatus__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; to &apos;pending&apos; or otherwise to &apos;approved&apos; if the Grant is automatically approved.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>