force-app/main/default/objects/Core_Grant__c/fields/Core_Automatically_approved__c.field-meta.xml
<CustomField>
    <fullName>Core_Automatically_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; if an Approval Process is started. Unchecked by the last step of the Approval Process &quot;Core_Grant_Approval_Process&quot;</description>
    <label>Automatically approved</label>
    <type>Checkbox</type>
</CustomField>