force-app/main/default/objects/Core_Grant__c/fields/Core_Bearer_Name_Zeppelin__c.field-meta.xml
<CustomField>
    <fullName>Core_Bearer_Name_Zeppelin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot;  with the information entered by the User.</description>
    <label>Bearer Name Zeppelin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>