force-app/main/default/objects/Core_Grant__c/fields/Core_Compliance_or_Board__c.field-meta.xml
<CustomField>
    <fullName>Core_Compliance_or_Board__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Compliance Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>