force-app/main/default/objects/Core_Grant__c/fields/Core_Date_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Core_Date_of_Approval__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Before_Insert&quot; and &quot;Core_Grant_Before_Update&quot; as soon as the Approvalstatus is changed from &quot;Pending&quot; to &quot;Approved&quot; or &quot;Declined&quot;</description>
    <label>Date of Approval</label>
    <type>Date</type>
</CustomField>