force-app/main/default/objects/Core_Grant__c/fields/Core_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Core_Enterprise__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Core_Strategic_Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zeppelin_Baumaschinen_GmbH</fullName>
                <label>Zeppelin Baumaschinen GmbH</label>
            </value>
            <value>
                <fullName>Zeppelin_Österreich_GmbH</fullName>
                <label>Zeppelin Österreich GmbH</label>
            </value>
            <value>
                <fullName>Zeppelin_CZ_sro</fullName>
                <label>Zeppelin CZ s.r.o.</label>
            </value>
            <value>
                <fullName>Zeppelin_Rental_GmbH</fullName>
                <label>Zeppelin Rental GmbH</label>
            </value>
            <value>
                <fullName>Zeppelin_Rental_Österreich</fullName>
                <label>Zeppelin Rental Österreich</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>