force-app/main/default/objects/Core_Grant__c/fields/Core_Grant_Description__c.field-meta.xml
<CustomField>
    <fullName>Core_Grant_Description__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Grant Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>