force-app/main/default/objects/Core_Grant__c/fields/Core_Other_Reason_for_Grant__c.field-meta.xml
<CustomField>
    <fullName>Core_Other_Reason_for_Grant__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User. Needs to be filled, if &quot;Other&quot; is selected in the field &quot;Reason for Grant&quot;.</description>
    <label>Other Reason for Grant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>