force-app/main/default/objects/Core_Grant__c/fields/Core_Reason_for_Grant__c.field-meta.xml
<CustomField>
    <fullName>Core_Reason_for_Grant__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Reason for Grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Visit</fullName>
            </value>
            <value>
                <fullName>Jubilee</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Negotiations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>