force-app/main/default/objects/Core_Grant__c/fields/Core_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Core_Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the Contact from which the Flow was started.</description>
    <label>Receiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>