force-app/main/default/objects/Core_Grant__c/fields/Core_Strategic_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Core_Strategic_Business_Unit__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Strategic Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baumaschine Zentraleuropa</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>