force-app/main/default/objects/Core_Grant__c/fields/Core_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Core_Supervisor__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Supervisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>