force-app/main/default/objects/Core_Grant__c/fields/Core_Worth_of_the_Grant__c.field-meta.xml
<CustomField>
    <fullName>Core_Worth_of_the_Grant__c</fullName>
    <description>1. Not integration relevant
2. Core
3. Set by Flow &quot;Core_Grant_Screen_Flow&quot; with the information entered by the User.</description>
    <label>Worth of Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>