force-app/main/default/objects/Core_Grant__c/validationRules/Core_Other_Type_of_Grant_Muss_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Core_Other_Type_of_Grant_Muss_be_filled</fullName>
    <active>true</active>
    <description>This validation rule ensures, that whenever &quot;Other&quot; is selected as a Type of Grant, this field needs to be filled by the user.</description>
    <errorConditionFormula>(ISPICKVAL( Core_Type_of_Grant__c, &quot;Other&quot;))
&amp;&amp;
(ISBLANK( Core_Other_Type_of_Grant__c ))
&amp;&amp;  $Permission.Core_Grant_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Core_Type_of_Grant__c</errorDisplayField>
    <errorMessage>Please enter a Type of Grant into the field Other Type of Grant!</errorMessage>
</ValidationRule>