force-app/main/default/objects/Core_Grant__c/validationRules/Core_Reason_for_Grant_Musst_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Core_Reason_for_Grant_Musst_be_filled</fullName>
    <active>true</active>
    <description>This validation rule ensures, that whenever &quot;Other&quot; is selected as a Reason for Grant, this field needs to be filled by the user.</description>
    <errorConditionFormula>(ISPICKVAL(  Core_Reason_for_Grant__c , &quot;Other&quot;))
&amp;&amp;
(ISBLANK(  Core_Other_Reason_for_Grant__c ))
&amp;&amp;  $Permission.Core_Grant_Bypass_Validation_Rules  = FALSE</errorConditionFormula>
    <errorDisplayField>Core_Reason_for_Grant__c</errorDisplayField>
    <errorMessage>Please enter a Reason for Grant into the field Other Reason for Grant!</errorMessage>
</ValidationRule>