force-app/main/default/objects/Core_Grant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Core_Receiver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>